add header section

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CodeItShop</title>
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,600,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/all.min.css">
     <link rel="stylesheet" href="css/bootstrap-grid.min.css">
@@ -11,6 +12,38 @@
 </head>
 <body>
     
+    <header class="header">
+        <div class="container">
+            <div class="row">
+                <div class="col-3">
+                    <a href="#" class="header-logo">
+                        <span class="header-logo__main">Code<span class="header-logo__main_dark">IT</span></span>
+                        <span class="header-logo__submain">Store</span>
+                    </a>
+                </div>
+                <div class="col-7">
+                    <nav class="header__nav">
+                        <a href="" class="header-nav__item active">HOME</a>
+                        <a href="" class="header-nav__item">all brands<i class="fas fa-chevron-down"></i></a>
+                        <a href="" class="header-nav__item">latest</a>
+                        <a href="" class="header-nav__item">featured</a>
+                        <a href="" class="header-nav__item">about</a>
+                        <a href="" class="header-nav__item">blog</a>
+                        <a href="" class="header-nav__item">Contact</a>
+                        <button class="header-nav__item header-nav__search"><i class="fas fa-search"></i></button>
+                    </nav>
+                </div>
+                <div class="col-2">
+                    <div class="header-basket">
+                            <i class="fas fa-shopping-bag"></i>
+                            <span class="header-basket__price">$ 460.00</span> 
+                            <div class="header-basket__numb">2</div> 
+                    </div>
+                </div>
+            </div>
+        </div>
+    </header>
+
     <script src="js/jquery-3.4.1.min.js"></script>
     <script src="js/main.js"></script>
 </body>
