--- a/index.html
+++ b/index.html
@@ -44,6 +44,22 @@
         </div>
     </header>
 
+    <section class="main">
+        <div class="container">
+            <div class="row">
+                <div class="col-3">
+                    <h1 class="main-title">My wishlist</h1>
+                </div>
+                <div class="col-9">
+                    <div class="main-breadcrumbs">
+                        <span class="main-breadcrumbs__item">home<i class="fas fa-chevron-right"></i></span>
+                        <span class="main-breadcrumbs__item">my wishlist<i class="fas fa-chevron-right"></i></span>
+                </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <script src="js/jquery-3.4.1.min.js"></script>
     <script src="js/main.js"></script>
 </body>
