add main section functional

--- a/index.html
+++ b/index.html
@@ -64,169 +64,15 @@
         <div class="container">
             <div class="main-filter">
                 <input type="text" class="main-filter__input">
-                <button class="main-filter__clear">Clear list</button>
+                <button class="main-filter__clear" disabled>Clear list</button>
             </div>
-            <div class="main-content">
-                <div class="row">                    
-                    <div class="col-3">
-                        <div class="main-content__item card">
-                            <div class="card__img">
-                                <img src="images/apple_iphone_6s_grey.png" alt="Iphone">
-                                <div class="card-overlay">
-                                    <button class="card-overlay__button card-remove-btn_js">remove from list</button>
-                                </div>
-                            </div>
-                            <h3 class="card__name">Huawei Mate S</h3>
-                            <div class="card-price">
-                                    <span class="card-price__new">$280.00</span>
-                                    <span class="card-price__old">$649.00</span>
-                            </div>
-                            <div class="card-buttons">
-                                    <button class="card-buttons__trash card-remove-btn_js"><i class="fal fa-trash-alt"></i></button>
-                                    <button class="card-buttons__basket"><i class="fas fa-shopping-cart"></i></button>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-3">
-                        <div class="main-content__item card">
-                            <div class="card__img">
-                                <img src="images/apple_iphone_6s_grey.png" alt="Iphone">
-                                <div class="card-overlay">
-                                    <button class="card-overlay__button card-remove-btn_js">remove from list</button>
-                                </div>
-                            </div>
-                            <h3 class="card__name">Huawei Mate S</h3>
-                            <div class="card-price">
-                                    <span class="card-price__new">$280.00</span>
-                                    <span class="card-price__old">$649.00</span>
-                            </div>
-                            <div class="card-buttons">
-                                    <button class="card-buttons__trash card-remove-btn_js"><i class="fal fa-trash-alt"></i></button>
-                                    <button class="card-buttons__basket"><i class="fas fa-shopping-cart"></i></button>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-3">
-                        <div class="main-content__item card">
-                            <div class="card__img">
-                                <img src="images/apple_iphone_6s_grey.png" alt="Iphone">
-                                <div class="card-overlay">
-                                    <button class="card-overlay__button card-remove-btn_js">remove from list</button>
-                                </div>
-                            </div>
-                            <h3 class="card__name">Huawei Mate S</h3>
-                            <div class="card-price">
-                                    <span class="card-price__new">$280.00</span>
-                                    <span class="card-price__old">$649.00</span>
-                            </div>
-                            <div class="card-buttons">
-                                    <button class="card-buttons__trash card-remove-btn_js"><i class="fal fa-trash-alt"></i></button>
-                                    <button class="card-buttons__basket"><i class="fas fa-shopping-cart"></i></button>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-3">
-                        <div class="main-content__item card">
-                            <div class="card__img">
-                                <img src="images/apple_iphone_6s_grey.png" alt="Iphone">
-                                <div class="card-overlay">
-                                    <button class="card-overlay__button card-remove-btn_js">remove from list</button>
-                                </div>
-                            </div>
-                            <h3 class="card__name">Huawei Mate S</h3>
-                            <div class="card-price">
-                                    <span class="card-price__new">$280.00</span>
-                                    <span class="card-price__old">$649.00</span>
-                            </div>
-                            <div class="card-buttons">
-                                    <button class="card-buttons__trash card-remove-btn_js"><i class="fal fa-trash-alt"></i></button>
-                                    <button class="card-buttons__basket"><i class="fas fa-shopping-cart"></i></button>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-3">
-                        <div class="main-content__item card">
-                            <div class="card__img">
-                                <img src="images/apple_iphone_6s_grey.png" alt="Iphone">
-                                <div class="card-overlay">
-                                    <button class="card-overlay__button card-remove-btn_js">remove from list</button>
-                                </div>
-                            </div>
-                            <h3 class="card__name">Huawei Mate S</h3>
-                            <div class="card-price">
-                                    <span class="card-price__new">$280.00</span>
-                                    <span class="card-price__old">$649.00</span>
-                            </div>
-                            <div class="card-buttons">
-                                    <button class="card-buttons__trash card-remove-btn_js"><i class="fal fa-trash-alt"></i></button>
-                                    <button class="card-buttons__basket"><i class="fas fa-shopping-cart"></i></button>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-3">
-                        <div class="main-content__item card">
-                            <div class="card__img">
-                                <img src="images/apple_iphone_6s_grey.png" alt="Iphone">
-                                <div class="card-overlay">
-                                    <button class="card-overlay__button card-remove-btn_js">remove from list</button>
-                                </div>
-                            </div>
-                            <h3 class="card__name">Huawei Mate S</h3>
-                            <div class="card-price">
-                                    <span class="card-price__new">$280.00</span>
-                                    <span class="card-price__old">$649.00</span>
-                            </div>
-                            <div class="card-buttons">
-                                    <button class="card-buttons__trash card-remove-btn_js"><i class="fal fa-trash-alt"></i></button>
-                                    <button class="card-buttons__basket"><i class="fas fa-shopping-cart"></i></button>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-3">
-                        <div class="main-content__item card">
-                            <div class="card__img">
-                                <img src="images/apple_iphone_6s_grey.png" alt="Iphone">
-                                <div class="card-overlay">
-                                    <button class="card-overlay__button card-remove-btn_js">remove from list</button>
-                                </div>
-                            </div>
-                            <h3 class="card__name">Huawei Mate S</h3>
-                            <div class="card-price">
-                                    <span class="card-price__new">$280.00</span>
-                                    <span class="card-price__old">$649.00</span>
-                            </div>
-                            <div class="card-buttons">
-                                    <button class="card-buttons__trash card-remove-btn_js"><i class="fal fa-trash-alt"></i></button>
-                                    <button class="card-buttons__basket"><i class="fas fa-shopping-cart"></i></button>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-3">
-                        <div class="main-content__item card">
-                            <div class="card__img">
-                                <img src="images/apple_iphone_6s_grey.png" alt="Iphone">
-                                <div class="card-overlay">
-                                    <button class="card-overlay__button card-remove-btn_js">remove from list</button>
-                                </div>
-                            </div>
-                            <h3 class="card__name">Huawei Mate S</h3>
-                            <div class="card-price">
-                                    <span class="card-price__new">$280.00</span>
-                                    <span class="card-price__old">$649.00</span>
-                            </div>
-                            <div class="card-buttons">
-                                    <button class="card-buttons__trash card-remove-btn_js"><i class="fal fa-trash-alt"></i></button>
-                                    <button class="card-buttons__basket"><i class="fas fa-shopping-cart"></i></button>
-                            </div>
-                        </div>
-                    </div>
+            <div class="main-content" id="main-content">
+                <div class="row">
+
                 </div>
             </div>
             <div class="main-pagination">
-                <button class="main-pagination__btn active" data-page="1">1</button>
-                <button class="main-pagination__btn" data-page="2">2</button>
-                <button class="main-pagination__btn" data-page="3">3</button>
-                <button class="main-pagination__btn" data-page="4">4</button>
+                
             </div>
         </div>
     </main>
