add advantages section

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/all.min.css">
     <link rel="stylesheet" href="css/bootstrap-grid.min.css">
+    <link rel="stylesheet" href="css/slick.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -77,7 +78,52 @@
         </div>
     </main>
 
+    <section class="advantages">
+        <div class="container">
+            <div class="advantages-wrapper">
+                <div class="advantages-wrapper__slider slider">
+                    <div class="slider-item">
+                        <i class="fas fa-thumbs-up"></i>
+                        <div class="slider-item-text">
+                            <h4 class="slider-item-text__title">Full warrenty</h4>
+                            <p class="slider-item-text__subtitle">Read About Our Warrenty</p>
+                        </div>
+                    </div>
+                    <div class="slider-item">
+                        <i class="fas fa-truck"></i>
+                        <div class="slider-item-text">
+                            <h4 class="slider-item-text__title">express shipping</h4>
+                            <p class="slider-item-text__subtitle">Local & International Shipping</p>
+                        </div>
+                    </div>
+                    <div class="slider-item">
+                        <i class="fas fa-comment-dots"></i>
+                        <div class="slider-item-text">
+                            <h4 class="slider-item-text__title">mobile blog</h4>
+                            <p class="slider-item-text__subtitle">Discuss Your Favourite Phone</p>
+                        </div>
+                    </div>
+                    <div class="slider-item">
+                        <i class="fas fa-headphones"></i>
+                        <div class="slider-item-text">
+                            <h4 class="slider-item-text__title">24/7 Support</h4>
+                            <p class="slider-item-text__subtitle">Get Full Support via Chat</p>
+                        </div>
+                    </div>
+                    <div class="slider-item">
+                        <i class="fas fa-thumbs-up"></i>
+                        <div class="slider-item-text">
+                            <h4 class="slider-item-text__title">Full warrenty</h4>
+                            <p class="slider-item-text__subtitle">Read About Our Warrenty</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <script src="js/jquery-3.4.1.min.js"></script>
+    <script src="js/slick.min.js"></script>
     <script src="js/main.js"></script>
 </body>
 </html>
