add footer section

--- a/index.html
+++ b/index.html
@@ -122,6 +122,54 @@
         </div>
     </section>
 
+    <footer class="footer">
+        <div class="footer-feedback feedback">
+            <div class="container">
+                <div class="row">
+                    <div class="col-4">
+                        <p class="feedback__text">subscribe to latest smartphones news & great deals we offer</p>
+                    </div>
+                    <div class="col-4">                        
+                        <input type="email" placeholder="Enter Your Email Address ..." class="feedback__email">                        
+                        <i class="far fa-envelope"></i>
+                        <p class="feedback__email_invalid">invalid email address</p>
+                        
+                    </div>
+                    <div class="col-4">
+                        <div class="feedback-social">
+                            <button class="button feedback-social__button"><a href="#" class="feedback-social__link"><i class="fab fa-twitter"></i></a></button>
+                            <button class="button feedback-social__button"><a href="#" class="feedback-social__link"><i class="fab fa-facebook-f"></i></a></button>
+                            <button class="button feedback-social__button"><a href="#" class="feedback-social__link"><i class="fab fa-linkedin-in"></i></a></button>
+                            <button class="button feedback-social__button"><a href="#" class="feedback-social__link"><i class="fab fa-google-plus-g"></i></a></button>
+                            <button class="button feedback-social__button"><a href="#" class="feedback-social__link"><i class="fab fa-pinterest-p"></i></a></button>
+                            <button class="button feedback-social__button"><a href="#" class="feedback-social__link"><i class="fab fa-youtube"></i></a></button>
+                            <button class="button feedback-social__button"><a href="#" class="feedback-social__link"><i class="fas fa-rss"></i></a></button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="footer-information">
+            <div class="container">
+                <div class="row">
+                    <div class="col-6">
+                        <small class="footer-information__copyright">Copyright © 2015 <strong>codeitStore</strong> All Rights Reserved.</small>
+                    </div>
+                    <div class="col-6">
+                            <div class="footer-information-payment payment">
+                                <div class="payment-card"><img src="images/visa-electron-card.jpg" alt="visa electron"></div>
+                                <div class="payment-card"><img src="images/paypal-card.jpg" alt="paypal"></div>
+                                <div class="payment-card"><img src="images/visa-card.jpg" alt="visa"></div>
+                                <div class="payment-card"><img src="images/mastercard-card.jpg" alt="mastercard"></div>
+                                <div class="payment-card"><img src="images/maestro-card.jpg" alt="maestro"></div>
+                                <div class="payment-card"><img src="images/discover-card.jpg" alt="discover"></div>
+                            </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
+
     <script src="js/jquery-3.4.1.min.js"></script>
     <script src="js/slick.min.js"></script>
     <script src="js/main.js"></script>
