add responsive for sm resolution

--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
     <header class="header">
         <div class="container">
             <div class="row">
-                <div class="col-md-2 col-xl-3">
+                <div class="col-sm-8 col-md-8 order-sm-1 col-lg-2 col-xl-3">
                     <a href="#" class="header-logo">
                         <span class="header-logo__main">Code<span class="header-logo__main_dark">IT</span></span>
                         <span class="header-logo__submain">Store</span>
                     </a>
                 </div>
-                <div class="col-md-8 col-xl-7">
-                    <nav class="header__nav">
+                <div class="col-sm-9 order-sm-3 col-md-12 col-xl-7">
+                    <nav class="header-nav">
                         <a href="" class="header-nav__item active">HOME</a>
                         <a href="" class="header-nav__item">all brands<i class="fas fa-chevron-down"></i></a>
                         <a href="" class="header-nav__item">latest</a>
@@ -34,7 +34,7 @@
                         <button class="header-nav__item header-nav__search"><i class="fas fa-search"></i></button>
                     </nav>
                 </div>
-                <div class="col-md-2 col-xl-2">
+                <div class="col-sm-4 col-md-4 order-sm-2 col-lg-2 col-xl-2">
                     <div class="header-basket">
                             <i class="fas fa-shopping-bag"></i>
                             <span class="header-basket__price">$ 460.00</span> 
@@ -48,10 +48,10 @@
     <section class="menu">
         <div class="container">
             <div class="row">
-                <div class="col-md-3">
+                <div class="col-sm-5 col-md-4 col-lg-3">
                     <h1 class="menu-title">My wishlist</h1>
                 </div>
-                <div class="col-md-9">
+                <div class="col-sm-7 col-md-8 col-lg-9">
                     <div class="menu-breadcrumbs">
                         <span class="menu-breadcrumbs__item">home<i class="fas fa-chevron-right"></i></span>
                         <span class="menu-breadcrumbs__item">my wishlist<i class="fas fa-chevron-right"></i></span>
@@ -126,16 +126,16 @@
         <div class="footer-feedback feedback">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-3 col-xl-4">
+                    <div class="col-sm-7 col-md-5 order-sm-2 col-lg-3 col-xl-4">
                         <p class="feedback__text">subscribe to latest smartphones news & great deals we offer</p>
                     </div>
-                    <div class="col-md-4">                        
+                    <div class="col-md-12 col-md-12 order-sm-1 col-lg-4">                        
                         <input type="email" placeholder="Enter Your Email Address ..." class="feedback__email">                        
                         <i class="far fa-envelope"></i>
                         <p class="feedback__email_invalid">invalid email address</p>
                         
                     </div>
-                    <div class="col-md-5 col-xl-4">
+                    <div class="col-sm-5 col-md-7 order-sm-3 col-lg-5 col-xl-4">
                         <div class="feedback-social">
                             <button class="button feedback-social__button"><a href="#" class="feedback-social__link"><i class="fab fa-twitter"></i></a></button>
                             <button class="button feedback-social__button"><a href="#" class="feedback-social__link"><i class="fab fa-facebook-f"></i></a></button>
@@ -152,10 +152,10 @@
         <div class="footer-information">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-6">
+                    <div class="col-12 col-md-6">
                         <small class="footer-information__copyright">Copyright © 2015 <strong> codeitStore </strong> All Rights Reserved.</small>
                     </div>
-                    <div class="col-md-6">
+                    <div class="col-12 col-md-6">
                             <div class="footer-information-payment payment">
                                 <div class="payment-card"><img src="images/visa-electron-card.jpg" alt="visa electron"></div>
                                 <div class="payment-card"><img src="images/paypal-card.jpg" alt="paypal"></div>
