add responsive for extra-small resolutions

--- a/index.html
+++ b/index.html
@@ -16,25 +16,25 @@
     <header class="header">
         <div class="container">
             <div class="row">
-                <div class="col-sm-8 col-md-8 order-sm-1 col-lg-2 col-xl-3">
+                <div class="col-5 order-1 order-lg-1 col-sm-8 col-md-8 col-lg-2 col-xl-3">
                     <a href="#" class="header-logo">
                         <span class="header-logo__main">Code<span class="header-logo__main_dark">IT</span></span>
                         <span class="header-logo__submain">Store</span>
                     </a>
                 </div>
-                <div class="col-sm-9 order-sm-3 col-md-12 col-xl-7">
+                <div class="col-12 order-3 order-lg-2 col-sm-8 col-md-12 col-lg-7">
                     <nav class="header-nav">
-                        <a href="" class="header-nav__item active">HOME</a>
-                        <a href="" class="header-nav__item">all brands<i class="fas fa-chevron-down"></i></a>
-                        <a href="" class="header-nav__item">latest</a>
-                        <a href="" class="header-nav__item">featured</a>
-                        <a href="" class="header-nav__item">about</a>
-                        <a href="" class="header-nav__item">blog</a>
-                        <a href="" class="header-nav__item">Contact</a>
+                        <a href="#" class="header-nav__item active">HOME</a>
+                        <a href="#" class="header-nav__item">all brands<i class="fas fa-chevron-down"></i></a>
+                        <a href="#" class="header-nav__item">latest</a>
+                        <a href="#" class="header-nav__item">featured</a>
+                        <a href="#" class="header-nav__item">about</a>
+                        <a href="#" class="header-nav__item">blog</a>
+                        <a href="#" class="header-nav__item">Contact</a>
                         <button class="header-nav__item header-nav__search"><i class="fas fa-search"></i></button>
                     </nav>
                 </div>
-                <div class="col-sm-4 col-md-4 order-sm-2 col-lg-2 col-xl-2">
+                <div class="col-7 order-2 order-lg-3 col-sm-4 col-md-4 col-lg-2 col-xl-2">
                     <div class="header-basket">
                             <i class="fas fa-shopping-bag"></i>
                             <span class="header-basket__price">$ 460.00</span> 
@@ -48,10 +48,10 @@
     <section class="menu">
         <div class="container">
             <div class="row">
-                <div class="col-sm-5 col-md-4 col-lg-3">
+                <div class="col-12 col-sm-5 col-md-4 col-lg-3">
                     <h1 class="menu-title">My wishlist</h1>
                 </div>
-                <div class="col-sm-7 col-md-8 col-lg-9">
+                <div class="col-12 col-sm-7 col-md-8 col-lg-9">
                     <div class="menu-breadcrumbs">
                         <span class="menu-breadcrumbs__item">home<i class="fas fa-chevron-right"></i></span>
                         <span class="menu-breadcrumbs__item">my wishlist<i class="fas fa-chevron-right"></i></span>
