hotfix footer elements order

--- a/index.html
+++ b/index.html
@@ -126,16 +126,16 @@
         <div class="footer-feedback feedback">
             <div class="container">
                 <div class="row">
-                    <div class="col-sm-7 col-md-5 order-sm-2 col-lg-3 col-xl-4">
+                    <div class="col-sm-7 col-md-5 order-sm-2 order-lg-1 col-lg-3 col-xl-4">
                         <p class="feedback__text">subscribe to latest smartphones news & great deals we offer</p>
                     </div>
-                    <div class="col-md-12 col-md-12 order-sm-1 col-lg-4">                        
+                    <div class="col-md-12 col-md-12 order-sm-1 order-lg-2 col-lg-4">                        
                         <input type="email" placeholder="Enter Your Email Address ..." class="feedback__email">                        
                         <i class="far fa-envelope"></i>
                         <p class="feedback__email_invalid">invalid email address</p>
                         
                     </div>
-                    <div class="col-sm-5 col-md-7 order-sm-3 col-lg-5 col-xl-4">
+                    <div class="col-sm-5 col-md-7 order-sm-3 order-lg-3 col-lg-5 col-xl-4">
                         <div class="feedback-social">
                             <button class="button feedback-social__button"><a href="#" class="feedback-social__link"><i class="fab fa-twitter"></i></a></button>
                             <button class="button feedback-social__button"><a href="#" class="feedback-social__link"><i class="fab fa-facebook-f"></i></a></button>
